[gd_scene load_steps=4 format=3 uid="uid://clde8gwbo0fe2"]

[ext_resource type="Script" uid="uid://mbywssq1b6yt" path="res://src/scripts/objects/enemy_projectile.gd" id="1_443bi"]
[ext_resource type="Texture2D" uid="uid://ot7ruu7n6j4x" path="res://src/assets/sprites/world_tileset.png" id="2_tm64o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wift6"]
size = Vector2(16, 8)

[node name="Platform_1_M" type="AnimatableBody2D"]
collision_layer = 768
collision_mask = 6
script = ExtResource("1_443bi")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
texture = ExtResource("2_tm64o")
region_enabled = true
region_rect = Rect2(128, 112, 16, 16)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 768
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_wift6")

[node name="red_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="green_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="red_timer" to="." method="_on_red_timer_timeout"]
[connection signal="timeout" from="green_timer" to="." method="_on_green_timer_timeout"]
